--- a/public/view/home.css
+++ b/public/view/home.css
@@ -1,16 +1,12 @@
-.home-container::after {
-  content: "";
+.home-container{
   background-image: url("/images/background/eaglemtn.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   background-attachment: scroll;
-  opacity: 1;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
+  height: 100%;
+  position: fixed;
+  overflow: auto;
+  border-top: grey solid;
 }
 .canvas-container {
   text-align: center;
@@ -106,6 +102,7 @@
 .canvas-cover {
   text-align: center;
   margin-top: 30px;
+  margin-bottom: 100px;
   font-family: "Trebuchet MS";
     font-weight: bold;
     font-style: normal;
