--- a/public/view/style.css
+++ b/public/view/style.css
@@ -25,8 +25,6 @@ a:hover {
   display: inline-block;
   background-color: #cccccc;
   width: 100%;
-  border-bottom-style: solid;
-  border-bottom-color: grey;
 }
 
 .bannerRight {
